[gd_scene load_steps=13 format=3 uid="uid://dvjj3n4gfu15n"]

[ext_resource type="Script" path="res://Scenes/main_game.gd" id="1_an8xt"]
[ext_resource type="AudioStream" uid="uid://tre7du1rhutu" path="res://Resources/Audio/message_in.wav" id="3_1i0mu"]
[ext_resource type="FontFile" uid="uid://bvc7otdv2tjnd" path="res://Resources/JetBrainsMono-VariableFont_wght.ttf" id="3_875v4"]
[ext_resource type="Script" path="res://CustomTypes/AudioPlayer.gd" id="3_hcl87"]
[ext_resource type="AudioStream" uid="uid://nifbctpbrq6t" path="res://Resources/Audio/door_destroy.wav" id="5_oa877"]
[ext_resource type="AudioStream" uid="uid://ev3kd3ogqv15" path="res://Resources/Audio/buro_explode.wav" id="6_nef6y"]
[ext_resource type="AudioStream" uid="uid://1sf4d5cqkus4" path="res://Resources/Audio/terminal_correct.wav" id="7_uhw63"]
[ext_resource type="AudioStream" uid="uid://dbxifpiwvh05f" path="res://Resources/Audio/terminal_warning.wav" id="8_mg1rh"]
[ext_resource type="AudioStream" uid="uid://yvdiwufkruuj" path="res://Resources/Audio/terminal_error.wav" id="9_wc2y8"]
[ext_resource type="AudioStream" uid="uid://r0t0fev4hadm" path="res://Resources/Audio/drone_die.wav" id="10_v2ihj"]
[ext_resource type="AudioStream" uid="uid://dinxm28wd1ytu" path="res://Resources/Audio/kill.wav" id="11_e782q"]
[ext_resource type="AudioStream" uid="uid://djxvhx7s7c1bp" path="res://Resources/Audio/heartbeat.mp3" id="12_ugxfk"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_an8xt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="CanvasLayer" parent="Camera2D"]

[node name="ConsoleInput" type="LineEdit" parent="Camera2D/Control"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -409.0
offset_top = -61.0
offset_right = -34.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_875v4")
theme_override_font_sizes/font_size = 12

[node name="TextEdit" type="TextEdit" parent="Camera2D/Control"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -408.0
offset_top = -257.0
offset_right = -34.0
offset_bottom = -69.0
grow_horizontal = 0
grow_vertical = 0
editable = false

[node name="ConsoleOutput" type="RichTextLabel" parent="Camera2D/Control"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -402.0
offset_top = -251.0
offset_right = -39.0
offset_bottom = -74.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_875v4")
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true

[node name="MessagesBG" type="ColorRect" parent="Camera2D/Control"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -219.0
offset_right = 415.0
offset_bottom = -25.0
grow_vertical = 0
color = Color(1, 1, 1, 0)

[node name="TextEdit2" type="TextEdit" parent="Camera2D/Control"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -224.0
offset_right = 419.0
offset_bottom = -20.0
grow_vertical = 0
editable = false

[node name="MessagesOutput" type="RichTextLabel" parent="Camera2D/Control"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 41.0
offset_top = -211.0
offset_right = 404.0
offset_bottom = -34.0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_875v4")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true

[node name="Location" type="Label" parent="Camera2D/Control"]
offset_left = 21.0
offset_top = 18.0
offset_right = 300.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("3_875v4")
theme_override_font_sizes/font_size = 19

[node name="Transition" type="ColorRect" parent="Camera2D/Control"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Messages" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1i0mu")
script = ExtResource("3_hcl87")

[node name="Doors" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_oa877")
script = ExtResource("3_hcl87")

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nef6y")
script = ExtResource("3_hcl87")

[node name="TerCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_uhw63")
script = ExtResource("3_hcl87")
inner_pct = 0.25

[node name="TerWarning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_mg1rh")
script = ExtResource("3_hcl87")
inner_pct = 0.25

[node name="TerError" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_wc2y8")
script = ExtResource("3_hcl87")
inner_pct = 0.25

[node name="DroneDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_v2ihj")
script = ExtResource("3_hcl87")

[node name="Kill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_e782q")
script = ExtResource("3_hcl87")

[node name="Heartbeat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ugxfk")
script = ExtResource("3_hcl87")
